# lazy-suffix-trees-haskell

./: .gitignore  README.md  TODO  notes.org  package.yaml  profile  rungrep  stack.yaml  suffix-trees-haskell.cabal  suffix-trees.cabal
app/: Main.hs
data/: sampletree
doc/: report.bib  report.tex
notes/: diary.org  how-to-write-your-thesis.org  suffix-trees.org
src/: Analyze.hs  Draw.hs  LazyTree.hs  Lib.hs  Reader.hs  Search.hs  Util.hs
src/Algorithm/: Common.hs  Search.hs
src/Algorithm/LazyTree/: Functional.hs
src/Algorithm/Ukkonen/: Functional.hs
src/Data/: Label.hs  SuffixTree.hs
src/LazyTree/: Functional.hs
src/Other/: LazyTree.hs
src/SuffixTree/: Analyze.hs  Draw.hs  Generator.hs  Reader.hs  Util.hs
src/SuffixTree/Algorithm/: Common.hs  LazyTree.hs  LazyTreeCountSort.hs  Search.hs  Ukkonen.hs
src/SuffixTree/Algorithm/LazyTree/: Functional.hs
src/SuffixTree/Algorithm/Ukkonen/: Functional.hs
src/SuffixTree/Data/: Label.hs  SuffixTree.hs
src/Ukkonen/: Functional.hs
suffix-trees/: suffix-trees.cabal
suffix-trees/notes/: how-to-write-your-thesis.org  suffix-trees.org
suffix-trees/src/: Lib.hs
test/: Benchmark.hs  LazyTree.hs  Spec.hs  Ukkonen.hs  Util.hs
