name:                suffix-trees-haskell
version:             0.2.0.0
synopsis:            Suffix trees in haskell
description:         This is so far an experimental library for implementing
                     suffix trees, created as a part of my master thesis.
homepage:            https://github.com/githubuser/suffix-trees-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Draw
                     , Reader
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , pretty-tree
                     , containers
                     , parsec
                     , QuickCheck
                     , random
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

executable suffix-trees-haskell-exe
  hs-source-dirs:      app,src
  main-is:             Main.hs
  build-depends:       base
                     , suffix-trees-haskell
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  other-modules:       Lib
  ghc-options:

test-suite suffix-trees-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , suffix-trees-haskell
  ghc-options:
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/suffix-trees-haskell
