name:                suffix-trees
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/suffix-trees#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable suffix-trees-exe
  hs-source-dirs:      app,src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , suffix-trees
                     , protolude
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  other-extensions:    NoImplicitPrelude
  other-modules:       Lib

test-suite suffix-trees-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , suffix-trees
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/suffix-trees
